# office_test

./: .gitignore  models.py  pyproject.toml  Документация .docx
django_poetry_example/: settings.py
employees/: Dockerfile
employees/employees/: settings.py  urls.py
employees/employees_app/: admin.py  models.py  serializers.py  views.py
employees/employees_app/migrations/: 0001_initial.py  0002_posts.py  0003_users_usr_post.py  0004_departments_alter_posts_post_id.py  0005_alter_departments_dep_code_usr_dep.py  0006_alter_usr_dep_usr_id.py  0007_alter_usr_dep_usr_id.py  0008_dep_director.py  0009_dep_director_date_of_transition.py  0010_remove_dep_director_date_of_transition_and_more.py  0011_alter_usr_dep_date_of_transition_emp_chef.py  0012_departments_dep_status.py  0013_alter_departments_dep_status.py  0014_remove_contacts_id_remove_emp_chef_id_and_more.py  0015_alter_contacts_contact_id_alter_departments_dep_id_and_more.py  0016_alter_departments_dep_code.py  0017_rename_contact_id_contacts_contact_and_more.py  0018_rename_posts_positions_and_more.py  0019_rename_position_descr_positions_description.py  0020_rename_usr_users_user.py
