[tool.poetry]
name = "office-test"
version = "0.0.1"
description = "Пытаемся разобраться с Poetry, Django и DRF в рамках тестовой задачи для офиса"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "office_test"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
django-admin = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
